# stockAlert

./: .gitignore  README.md  env.py  pyproject.toml  requirements.txt
jupyter/: 00_line_messaging_api.ipynb  01_get_rsi.ipynb
src/: add_path.py  main.py  tickers.py  utils.py
