[project]
name = "stockalert"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = "~=3.9"
readme = "README.md"
dependencies = [
    "curl-cffi>=0.10.0",
    "line-bot-sdk>=3.16.0",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "yfinance==0.2.58",
]

[dependency-groups]
dev = [
    "jupyter>=1.0.0,<2",
    "black>=23.1.0,<24",
]
